--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <!--Link to main.css-->
+    <link rel="stylesheet" href="main.css">
+
     <title>Hello, world!</title>
 
   </head>
 
   <body>
+
+    <script src="main.js"></script>
 
   </body>
 
