--- a/index.html
+++ b/index.html
@@ -17,6 +17,41 @@
 
   <body>
 
+    <header>
+
+      <h1>Box Challenge</h1>
+
+    </header>
+
+    <main>
+
+      <h2>Test your luck. Choose a box. Win a prize.</h2>
+
+      <section>
+
+        <div>
+
+          <p>1</p>
+
+        </div>
+
+        <div>
+
+          <p>2</p>
+
+        </div>
+
+        <div>
+
+          <p>3</p>
+
+        </div>
+
+      </section>
+
+    </main>
+
+    <!--Link to main.js-->
     <script src="main.js"></script>
 
   </body>
