--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
 
       <section>
 
-        <div>
+        <div id="box1" class="box">
 
           <p>1</p>
 
         </div>
 
-        <div>
+        <div id="box2" class="box">
 
           <p>2</p>
 
         </div>
 
-        <div>
+        <div id="box3" class="box">
 
           <p>3</p>
 
