Set font family for body of page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <!--Link to Google Font-->
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+
     <!--Link to main.css-->
     <link rel="stylesheet" href="main.css">
 
