Change title in index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!--Link to main.css-->
     <link rel="stylesheet" href="main.css">
 
-    <title>Hello, world!</title>
+    <title>Homework 5 - Box Challenge</title>
 
   </head>
 
